src/components/sections/TopBlock/style.module.scss
@import "~assets/styles/variables.scss";
@import "~assets/styles/media.scss";

.topBlock {
  background-repeat: no-repeat;
  background-size: 100% 80%;
  min-height: 100vh;
  position: relative;
  @media screen and (min-width: $desktop) {
    background-image: none;
    background-color: $background;
  }
}

.videoBlock {
  position: relative;
}

.metaMorphMobile {
  width: 201.65px;
  height: 70.28px;
}

.metaMorphMain {
  width: 505px;
  height: 176px;
}

.closeBtn {
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 5;
  position: absolute;
  cursor: pointer;
  right: 26px;
  background: rgba(25, 25, 29, 0.6);
  backdrop-filter: blur(4px);
  border: none;
  top: 8vw;
  border-radius: 50%;
  height: 60px;
  width: 60px;

  @media screen and (max-width: $desktop) {
    height: 35px;
    width: 35px;
    & img {
      width: 15px;
    }
  }
}

.container {
  display: flex;
  flex-direction: column;

  @media screen and (min-width: $desktop) {
    flex-direction: row;
    justify-content: space-evenly;
    padding: 65px 116px 0 120px;
  }
}

.mainBlock {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 10;
  padding-top: 85px;

  @media screen and (min-width: $desktop) {
    justify-content: flex-start;
    padding-top: 157px;

  }
}

.playBtn {
  display: flex;
  align-items: center;
  cursor: pointer;
  padding: 8px 12px 8px 16px;
  gap: 12px;
  color: #fff;
  height: 40px;
  width: 170px;
  background: rgba(255, 255, 255, 0.08);
  backdrop-filter: blur(4px);
  margin-top: 42px;
  border: 1px solid #FFFFFF;

  @media screen and (min-width: $desktop) {
    margin-top: 43px;
    margin-left: -5px;
    height: 49px;
    padding: 12px 16px 12px 20px;
    width: 206px;
    border: none;
  }
}

.playText {
  font-weight: 400;
  font-size: 13px;
  line-height: 120%;
  text-align: center;
  letter-spacing: 0.05em;
  color: #FFFFFF;

  @media screen and (min-width: $desktop) {
    font-size: 16px;
  }
}

.morphImage {
  margin-top: 52px;
  width: 354px;
}

.builtOnContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: 5;
  position: absolute;
  bottom: 33px;
  width: 100%;

  @media screen and (min-width: $desktop) {
    position: relative;
    bottom: 0;
    margin-top: 142px;
  }
}

.builtOnLine {
  width: 1px;
  min-height: 100%;
  background: #737373;
}

.builtOn {
  font-family: 'Hanson', sans-serif;
  font-size: 16px;
  line-height: 120%;
  text-align: center;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #C1C0C0;

  @media screen and (min-width: $desktop) {
    font-size: 20px;
    color: #A7ACB0;
  }
}

.builtBy {
  display: flex;
  justify-content: space-between;
  width: 163.11px;
  margin-top: 15px;

  @media screen and (min-width: $desktop) {
    width: 207px;
    margin-top: 30px;
  }
}

